# ainovelstudio

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/agents/boring-detect/: AGENTS.md  MEMORY.md  TOOLS.md  manifest.json
src-tauri/resources/agents/chapter-editor/: AGENTS.md  manifest.json
src-tauri/resources/agents/chapter-write/: AGENTS.md  MEMORY.md  TOOLS.md  manifest.json
src-tauri/resources/agents/character-check/: AGENTS.md  MEMORY.md  TOOLS.md  manifest.json
src-tauri/resources/agents/character-design/: AGENTS.md  MEMORY.md  TOOLS.md  manifest.json
src-tauri/resources/agents/chief-editor/: AGENTS.md  manifest.json
src-tauri/resources/agents/concept-check/: AGENTS.md  MEMORY.md  TOOLS.md  manifest.json
src-tauri/resources/config/: AGENTS.md
src-tauri/src/: agents.rs  app_control.rs  app_update.rs  chat.rs  config.rs  db.rs  lib.rs  main.rs  provider_proxy.rs  skills.rs  usage.rs  workspace.rs  workspace_db.rs
src-tauri/src/app/: app_control.rs  cancellation.rs  mod.rs  tray.rs
src-tauri/src/data_management/: archive.rs  mod.rs  webdav.rs
src-tauri/src/domains/: leaderboard.rs  mod.rs
src-tauri/src/infrastructure/: db.rs  embedded_resources.rs  mod.rs  provider_forward.rs  provider_proxy.rs  provider_stream.rs  provider_stream_registry.rs  update_manifest.rs  workspace_paths.rs
src-tauri/src/workflows/: builtin.rs  commands.rs  db.rs  management.rs  mod.rs  package_export.rs  repository.rs  types.rs  validate.rs
src-tauri/src/workspace/: common.rs  expansion.rs  mod.rs
(+931 files in other folders)
