[package]
name = "ainovelstudio"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ainovelstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "stream"] }
futures-util = "0.3.32"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
zip = { version = "8.6.0", default-features = true }
encoding_rs = "0.8.35"

[dev-dependencies]
tempfile = "3"
